tooling/nargo_cli/tests/snapshots/execution_success/regression_7962/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "v0",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 64
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "unsigned",
        "width": 64
      },
      "visibility": "public"
    },
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _4",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : [_1]",
    "BLACKBOX::RANGE [_0]:64 bits []",
    "EXPR [ (1, _0) (-1, _2) -1 ]",
    "BLACKBOX::RANGE [_2]:64 bits []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) 18446744073709551616 ], EXPR [ 2 ]], outputs: [_3, _4]",
    "BLACKBOX::RANGE [_3]:64 bits []",
    "BLACKBOX::RANGE [_4]:1 bits []",
    "EXPR [ (1, _2) (-2, _3) (-1, _4) 18446744073709551616 ]",
    "EXPR [ (1, _1) (-1, _4) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]"
  ],
  "debug_symbols": "jZBNCsMgEIXvMmsX+TNQr1JKMGYSBFExWighd+9EkjZZFLp548zzc/AtMGCfpk7b0c0g7gv0QRujp844JaN2lqbLyuBouxgQaQQnnygvA9oIwiZjGDylSfnS7KXNNcpAbsEA7UCVHhy1we20si9d/Eabemeb2wfmf9Oc73RbXugHdVLpcPktlCBKBlXWGkTFoMnKs7ak67YqaNkb3PMZk1WnuOLLH84RqA9O4ZACbsuyR+vf",
  "file_map": {
    "50": {
      "source": "fn main(v0: u64) -> pub u64 {\n    let v1 = v0 - 1;\n    v1 & 1\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
