tooling/nargo_cli/tests/snapshots/execution_success/regression_7962/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "v0",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 64
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "unsigned",
        "width": 64
      },
      "visibility": "public"
    },
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : 4",
    "private parameters indices : [0]",
    "public parameters indices : []",
    "return value indices : [1]",
    "BLACKBOX::RANGE [(_0, 64)] []",
    "EXPR [ (1, _0) (-1, _2) -1 ]",
    "BLACKBOX::RANGE [(_2, 64)] []",
    "BRILLIG CALL func 0: inputs: [Single(Expression { mul_terms: [], linear_combinations: [(1, Witness(2))], q_c: 2 }), Single(Expression { mul_terms: [], linear_combinations: [], q_c: 2 })], outputs: [Simple(Witness(3)), Simple(Witness(4))]",
    "BLACKBOX::RANGE [(_3, 64)] []",
    "BLACKBOX::RANGE [(_4, 1)] []",
    "EXPR [ (1, _2) (-2, _3) (-1, _4) 2 ]",
    "EXPR [ (1, _1) (-1, _4) 0 ]",
    "",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]",
    ""
  ],
  "debug_symbols": "lZDLCoMwEEX/ZdYuajVC8yulSJ4yEJKQR6EE/71RFKR0k92cuWfuYgpIxfMyo9UuAn0WME6whM5WKtDvq+iZ3SgmFhLQcehAWVmHx9qBRqOAktv66uDepg//dEIOfep/9LFNJ2361KJX4AGNwWW+/quu3ywg40YdqLMVlzR9/Jmc9z44oWQOamvas1r/BQ==",
  "file_map": {
    "50": {
      "source": "fn main(v0: u64) -> pub u64 {\n    let v1 = v0 - 1;\n    v1 & 1\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient"
  ]
}
